--- a/emacs.org
+++ b/emacs.org
@@ -108,6 +108,9 @@ Now, start emacs.
 
 (use-package groovy-mode
   :mode ("Jenkinsfile$" . groovy-mode))
+
+(use-package jsonnet-mode
+  :mode ("\\.libsonnet\\'" . jsonnet-mode))
 #+END_SRC
 
 ** helper functions
