--- a/emacs.org
+++ b/emacs.org
@@ -1561,8 +1561,8 @@ counsel-keys
 | C-x E   | counsel-kmacro            |                       |                  |       |
 | C-x C-r | ivy-resume                |                       |                  |       |
 | M-s o   | swiper-thing-at-point     |                       |                  |       |
-| C-s     | swiper                    |                       |                  |       |
-| C-r     | swiper-backward           |                       |                  |       |
+| C-s     | swiper-dwim               |                       |                  |       |
+| C-r     | swiper-backward-dwim      |                       |                  |       |
 | C-s     | ivy-next-line             | swiper-map            |                  |       |
 | C-r     | ivy-previous-line         | swiper-map            |                  |       |
 | M-s g   | counsel-grep              |                       |                  |       |
@@ -1587,6 +1587,22 @@ counsel-keys
       ivy-use-selectable-prompt t
       ivy-re-builders-alist '((t . ivy--regex-ignore-order)))
 (setq max-mini-window-height 0.90) ;; fix for https://github.com/abo-abo/swiper/issues/2397
+
+(defun swiper-dwim (arg)
+  (interactive "P")
+  (if (region-active-p)
+      (swiper (buffer-substring-no-properties (region-beginning) (region-end)))
+    (if arg
+        (swiper-thing-at-point)
+      (swiper))))
+
+(defun swiper-backward-dwim (arg)
+  (interactive "P")
+  (if (region-active-p)
+      (swiper-backward (buffer-substring-no-properties (region-beginning) (region-end)))
+    (if arg
+        (swiper-thing-at-point)
+      (swiper-backward))))
 
 (defun ivy-dispatching-done-ivy ()
   (interactive)
