counsel-find-file-dwim - remove aggressive browse-url

--- a/emacs.org
+++ b/emacs.org
@@ -1594,9 +1594,7 @@ counsel-keys
       (counsel-find-file (buffer-substring-no-properties (region-beginning) (region-end)))
     (if arg
         (counsel-find-file (thing-at-point 'filename))
-      (if (thing-at-point 'url)
-          (browse-url (thing-at-point 'url))
-        (counsel-find-file)))))
+      (counsel-find-file))))
 
 (defun swiper-dwim (arg)
   (interactive "P")
