--- a/emacs.org
+++ b/emacs.org
@@ -108,6 +108,8 @@ This is a fix for http://elpa.gnu.org/packages/gnu-elpa-keyring-update.html. Can
   :config (add-hook 'before-save-hook 'gofmt-before-save))
 (use-package ob-go)
 
+(use-package ob-mongo)
+
 (use-package coffee-mode
   :config (setq coffee-tab-width 2))
 
@@ -1396,7 +1398,7 @@ org-keys
 
 (org-babel-support-langs
  (list 'awk 'calc 'C 'emacs-lisp 'java 'js 'latex 'lisp
-       'makefile 'org 'perl 'python 'R 'ruby 'scheme 'shell 'sql 'go))
+       'makefile 'org 'perl 'python 'R 'ruby 'scheme 'shell 'sql 'go 'mongo))
 
 (add-to-list 'org-src-lang-modes '("elisp" . emacs-lisp))
 (org-babel-src-yasnippet 'elisp 'emacs-lisp)
